{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 322,
  "lineage": "4ad5ee9d-fbdf-6af9-f27f-c81024f385e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09029a4f454bbd4cb",
            "arn": "arn:aws:ec2:us-west-1:187940856853:instance/i-0fea10764b4adcaeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fea10764b4adcaeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a26b5f0b4c48ba3c",
            "private_dns": "ip-10-0-101-251.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.251",
            "public_dns": "ec2-54-183-155-216.us-west-1.compute.amazonaws.com",
            "public_ip": "54.183.155.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-004aeb0a003dfce8a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8961104506d4bb8",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f834344335f29ecd"
            ]
          },
          "dependencies": [
            "aws_security_group.for_website",
            "data.aws_ami.latest_linux_ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for_website",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:security-group/sg-0f834344335f29ecd",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f834344335f29ecd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_for_website",
            "name_prefix": "",
            "owner_id": "187940856853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:network-acl/acl-0b7d8260a2d1e8a3f",
            "default_network_acl_id": "acl-0b7d8260a2d1e8a3f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b7d8260a2d1e8a3f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "187940856853",
            "subnet_ids": [
              "subnet-020da6f3f3f08f975",
              "subnet-0580cba193701384f",
              "subnet-070b1dc669b017939",
              "subnet-0a8961104506d4bb8",
              "subnet-0d3a1779eb3486e70",
              "subnet-0e2f14cac9d65f14a"
            ],
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:route-table/rtb-018f0d37dab3bf844",
            "default_route_table_id": "rtb-018f0d37dab3bf844",
            "id": "rtb-018f0d37dab3bf844",
            "owner_id": "187940856853",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:security-group/sg-0ac5d73119df5b73e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ac5d73119df5b73e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "187940856853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01976badd33b07f2c",
            "domain": "vpc",
            "id": "eipalloc-01976badd33b07f2c",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-52-188-231.us-west-1.compute.amazonaws.com",
            "public_ip": "52.52.188.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0765c629e14246f07",
            "domain": "vpc",
            "id": "eipalloc-0765c629e14246f07",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-143-40.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.143.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3fec18794577195",
            "domain": "vpc",
            "id": "eipalloc-0f3fec18794577195",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-52-137-153.us-west-1.compute.amazonaws.com",
            "public_ip": "52.52.137.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:internet-gateway/igw-0de60062041ae0bf9",
            "id": "igw-0de60062041ae0bf9",
            "owner_id": "187940856853",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01976badd33b07f2c",
            "association_id": "eipassoc-0304af8d8dd29ffb9",
            "connectivity_type": "public",
            "id": "nat-010e8922c5a685a37",
            "network_interface_id": "eni-01732b389cb932987",
            "private_ip": "10.0.101.169",
            "public_ip": "52.52.188.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a8961104506d4bb8",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0765c629e14246f07",
            "association_id": "eipassoc-02da1bf5967cdb339",
            "connectivity_type": "public",
            "id": "nat-009a664f09207a7b9",
            "network_interface_id": "eni-0d636e10af4646805",
            "private_ip": "10.0.102.184",
            "public_ip": "54.241.143.40",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-070b1dc669b017939",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3fec18794577195",
            "association_id": "eipassoc-0010c721949a9b548",
            "connectivity_type": "public",
            "id": "nat-0bd6d70cec84fcc9e",
            "network_interface_id": "eni-05425379582a8a932",
            "private_ip": "10.0.103.70",
            "public_ip": "52.52.137.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0580cba193701384f",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c82204e455f2f9821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-010e8922c5a685a37",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c82204e455f2f982",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-086a07796592d07df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-009a664f09207a7b9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-086a07796592d07df",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005bc468f04a96fda1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bd6d70cec84fcc9e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005bc468f04a96fda",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de60062041ae0bf9",
            "id": "r-rtb-0f65989c255e66dbb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f65989c255e66dbb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:route-table/rtb-0c82204e455f2f982",
            "id": "rtb-0c82204e455f2f982",
            "owner_id": "187940856853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:route-table/rtb-086a07796592d07df",
            "id": "rtb-086a07796592d07df",
            "owner_id": "187940856853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:route-table/rtb-005bc468f04a96fda",
            "id": "rtb-005bc468f04a96fda",
            "owner_id": "187940856853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:route-table/rtb-0f65989c255e66dbb",
            "id": "rtb-0f65989c255e66dbb",
            "owner_id": "187940856853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a4fe832bcae96c6",
            "route_table_id": "rtb-0c82204e455f2f982",
            "subnet_id": "subnet-0e2f14cac9d65f14a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a893076397d3986b",
            "route_table_id": "rtb-086a07796592d07df",
            "subnet_id": "subnet-0d3a1779eb3486e70"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f274fd509cb0c7e5",
            "route_table_id": "rtb-005bc468f04a96fda",
            "subnet_id": "subnet-020da6f3f3f08f975"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ef8e6a919cd795f",
            "route_table_id": "rtb-0f65989c255e66dbb",
            "subnet_id": "subnet-0a8961104506d4bb8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084ca8864ed61db27",
            "route_table_id": "rtb-0f65989c255e66dbb",
            "subnet_id": "subnet-070b1dc669b017939"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab3e5b22af05187f",
            "route_table_id": "rtb-0f65989c255e66dbb",
            "subnet_id": "subnet-0580cba193701384f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:subnet/subnet-0e2f14cac9d65f14a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2f14cac9d65f14a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:subnet/subnet-0d3a1779eb3486e70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3a1779eb3486e70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:subnet/subnet-020da6f3f3f08f975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020da6f3f3f08f975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:subnet/subnet-0a8961104506d4bb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8961104506d4bb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:subnet/subnet-070b1dc669b017939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070b1dc669b017939",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:subnet/subnet-0580cba193701384f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0580cba193701384f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187940856853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0b4e903125c50a6b8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:187940856853:vpc/vpc-0b4e903125c50a6b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7d8260a2d1e8a3f",
            "default_route_table_id": "rtb-018f0d37dab3bf844",
            "default_security_group_id": "sg-0ac5d73119df5b73e",
            "dhcp_options_id": "dopt-0a18ca6c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4e903125c50a6b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018f0d37dab3bf844",
            "owner_id": "187940856853",
            "tags": {
              "Name": "nchau",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "nchau",
              "Project": "Terraform"
            }
          }
        }
      ]
    }
  ]
}